--- a/tasks/section6.yml
+++ b/tasks/section6.yml
@@ -1,6 +1,7 @@
 - name: "NOTSCORED | 6.1.1 | PATCH | Audit system file permissions"
   command: /bin/true
   tags:
+      - notimplemented
       - level2
       - patch
       - rule_6.1.1
@@ -112,6 +113,7 @@
 - name: "SCORED | 6.1.10 | PATCH | Ensure no world writable files exist"
   command: /bin/true
   tags:
+      - notimplemented
       - level1
       - level2
       - patch
@@ -120,6 +122,7 @@
 - name: "SCORED | 6.1.11 | PATCH | Ensure no unowned files or directories exist"
   command: /bin/true
   tags:
+      - notimplemented
       - level1
       - level2
       - patch
@@ -128,6 +131,7 @@
 - name: "SCORED | 6.1.12 | PATCH | Ensure no ungrouped files or directories exist"
   command: /bin/true
   tags:
+      - notimplemented
       - level1
       - level2
       - patch
@@ -136,6 +140,7 @@
 - name: "NOTSCORED | 6.1.13 | PATCH | Audit SUID executables"
   command: /bin/true
   tags:
+      - notimplemented
       - level1
       - level2
       - patch
@@ -144,6 +149,7 @@
 - name: "NOTSCORED | 6.1.14 | PATCH | Audit SGID executables"
   command: /bin/true
   tags:
+      - notimplemented
       - level1
       - level2
       - patch
@@ -255,6 +261,7 @@
     owner: root
     group: root
     state: absent
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
@@ -268,6 +275,7 @@
     owner: root
     group: root
     mode: 0700
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
@@ -530,6 +538,7 @@
       state: absent
       dest: "~{{ item }}/.forward"
   with_items: "{{ users.stdout_lines }}"
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
@@ -539,8 +548,8 @@
 
 - name: "SCORED | 6.2.12 | PATCH | Ensure no users have .netrc files"
   file:
-      state: absent
-      dest: "~{{ item }}/.netrc"
+    state: absent
+    dest: "~{{ item }}/.netrc"
   with_items: "{{ users.stdout_lines }}"
   tags:
       - level1
@@ -548,6 +557,76 @@
       - low
       - patch
       - rule_6.2.12
+
+- name: "SCORED | 6.2.13 | PATCH | Ensure users' .netrc files are not group or world accessible"
+  copy:
+    src: scripts/6.2.13.sh
+    dest: /opt/6.2.13.sh
+    owner: root
+    group: root
+    mode: 0700
+  ignore_errors: "{{ ansible_check_mode }}"  
+  tags:
+    - level1
+    - level2
+    - low
+    - rule_6.2.13
+    - patch
+
+- name: "SCORED | 6.2.13 | PATCH | Ensure users' .netrc files are not group or world accessible"
+  shell: /opt/6.2.13.sh
+  args:
+    executable: /bin/bash
+  register: dot_netrc_files
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+    - level1
+    - level2
+    - low
+    - rule_6.2.13
+    - patch
+
+- name: "SCORED | 6.2.13 | PATCH | Ensure users' .netrc files are not group or world accessible"
+  debug:
+    var: dot_netrc_files.stdout_lines
+  when:
+    - not ansible_check_mode
+    - dot_netrc_files is defined
+  tags:
+    - level1
+    - level2
+    - low
+    - rule_6.2.13
+    - patch
+
+- name: "SCORED | 6.2.13 | PATCH | Ensure users' .netrc files are not group or world accessible"
+  debug:
+    msg: "PASS | 6.2.13 | Users' .netrc files are not group or world accessible."
+  when:
+    - not ansible_check_mode
+    - dot_netrc_files is defined
+    - dot_netrc_files.stdout == ""
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+    - level1
+    - level2
+    - low
+    - rule_6.2.13
+    - patch
+
+- name: "SCORED | 6.2.13 | PATCH | Ensure users' .netrc Files are not group or world accessible"
+  file:
+    path: /opt/6.2.13.sh
+    owner: root
+    group: root
+    state: absent
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+    - level1
+    - level2
+    - low
+    - rule_6.2.13
+    - patch
 
 # - name: "SCORED | 6.2.13 | PATCH | Ensure users' .netrc Files are not group or world accessible"
 #   file:
@@ -565,6 +644,8 @@
       state: absent
       dest: "~{{ item }}/.rhosts"
   with_items: "{{ users.stdout_lines }}"
+  when: users is defined
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
@@ -573,18 +654,63 @@
       - rule_6.2.14
 
 - name: "SCORED | 6.2.15 | PATCH | Ensure all groups in /etc/passwd exist in /etc/group"
-  script: /etc/ansible/roles/centos7cis/scripts/rule_six_two_fifteen.sh
-  ignore_errors: yes
-  register: centos7_cis_rule_6_2_15_results
+  copy:
+    src: scripts/6.2.15.sh
+    dest: /opt/6.2.15.sh
+    owner: root
+    group: root
+    mode: 0700
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
       - patch
       - rule_6.2.15
 
-- name: "SCORED | 6.2.15 | PATCH | Ensure all groups in /etc/passwd exist in /etc/group | Print Out"
+- name: "SCORED | 6.2.15 | PATCH | Ensure all groups in /etc/passwd exist in /etc/group"
+  shell: /opt/6.2.15.sh
+  args:
+    executable: /bin/bash
+  register: check_groups_in_passwd
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.15
+
+- name: "SCORED | 6.2.15 | PATCH | Ensure all groups in /etc/passwd exist in /etc/group"
   debug:
-    var: centos7_cis_rule_6_2_15_results
+    var: check_groups_in_passwd.stdout_lines
+  when:
+    - not ansible_check_mode
+    - check_groups_in_passwd is defined
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.15
+
+- name: "SCORED | 6.2.15 | PATCH | Ensure all groups in /etc/passwd exist in /etc/group"
+  debug:
+    msg: "PASS | 6.2.15 | All groups exist in /etc/group."
+  when:
+    - check_groups_in_passwd is defined
+    - not ansible_check_mode
+    - check_groups_in_passwd.stdout_lines == ""
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.15
+
+- name: "SCORED | 6.2.15 | PATCH | Ensure all groups in /etc/passwd exist in /etc/group"
+  file:
+    path: /opt/6.2.15.sh
+    owner: root
+    group: root
+    state: absent
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
@@ -657,7 +783,64 @@
       - rule_6.2.16
 
 - name: "SCORED | 6.2.17 | PATCH | Ensure no duplicate GIDs exist"
-  command: /bin/true
+  copy:
+    src: scripts/6.2.17.sh
+    dest: /opt/6.2.17.sh
+    owner: root
+    group: root
+    mode: 0700
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.17
+
+- name: "SCORED | 6.2.17 | PATCH | Ensure no duplicate GIDs exist"
+  shell: /opt/6.2.17.sh
+  args:
+    executable: /bin/bash
+  register: duplicate_gids
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.17
+
+- name: "SCORED | 6.2.17 | PATCH | Ensure no duplicate GIDs exist"
+  debug:
+    var: duplicate_gids.stdout_lines
+  when:
+    - duplicate_gids is defined
+    - not ansible_check_mode
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.17
+
+- name: "SCORED | 6.2.17 | PATCH | Ensure no duplicate GIDs exist"
+  debug:
+    msg: "PASS | 6.2.17 | No duplicate GIDs exist."
+  when:
+    - duplicate_gids is defined
+    - not ansible_check_mode
+    - duplicate_gids.stdout == ""
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.17
+
+- name: "SCORED | 6.2.17 | PATCH | Ensure no duplicate GIDs exist"
+  file:
+    path: /opt/6.2.17.sh
+    owner: root
+    group: root
+    state: absent
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
@@ -665,7 +848,64 @@
       - rule_6.2.17
 
 - name: "SCORED | 6.2.18 | PATCH | Ensure no duplicate user names exist"
-  command: /bin/true
+  copy:
+    src: scripts/6.2.18.sh
+    dest: /opt/6.2.18.sh
+    owner: root
+    group: root
+    mode: 0700
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.18
+
+- name: "SCORED | 6.2.18 | PATCH | Ensure no duplicate user names exist"
+  shell: /opt/6.2.18.sh
+  args:
+    executable: /bin/bash
+  register: duplicate_users
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.18
+
+- name: "SCORED | 6.2.18 | PATCH | Ensure no duplicate user names exist"
+  debug:
+    var: duplicate_users.stdout_lines
+  when:
+    - duplicate_users is defined
+    - not ansible_check_mode
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.18
+
+- name: "SCORED | 6.2.18 | PATCH | Ensure no duplicate user names exist"
+  debug:
+    msg: "PASS | 6.2.18 | No duplicate user names exist"
+  when:
+    - duplicate_users is defined
+    - not ansible_check_mode
+    - duplicate_users.stdout == ""
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.18
+
+- name: "SCORED | 6.2.18 | PATCH | Ensure no duplicate user names exist"
+  file:
+    path: /opt/6.2.18.sh
+    owner: root
+    group: root
+    state: absent
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
@@ -673,7 +913,64 @@
       - rule_6.2.18
 
 - name: "SCORED | 6.2.19 | PATCH | Ensure no duplicate group names exist"
-  command: /bin/true
+  copy:
+    src: scripts/6.2.19.sh
+    dest: /opt/6.2.19.sh
+    owner: root
+    group: root
+    mode: 0700
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.19
+
+- name: "SCORED | 6.2.19 | PATCH | Ensure no duplicate group names exist"
+  shell: /opt/6.2.19.sh
+  args:
+    executable: /bin/bash
+  register: duplicate_groups
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.19
+
+- name: "SCORED | 6.2.19 | PATCH | Ensure no duplicate group names exist"
+  debug:
+    var: duplicate_groups.stdout_lines
+  when:
+    - duplicate_groups is defined
+    - not ansible_check_mode
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.19
+
+- name: "SCORED | 6.2.19 | PATCH | Ensure no duplicate group names exist"
+  debug:
+    msg: "PASS | 6.2.19 | No duplicate group names exist"
+  when:
+    - duplicate_groups is defined
+    - not ansible_check_mode
+    - duplicate_groups.stdout == ""
+  ignore_errors: "{{ ansible_check_mode }}"
+  tags:
+      - level1
+      - level2
+      - patch
+      - rule_6.2.19
+
+- name: "SCORED | 6.2.19 | PATCH | Ensure no duplicate group names exist"
+  file:
+    path: /opt/6.2.19.sh
+    owner: root
+    group: root
+    state: absent
+  ignore_errors: "{{ ansible_check_mode }}"
   tags:
       - level1
       - level2
